--- a/members.html
+++ b/members.html
@@ -212,7 +212,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a class="image featured"><img src="images/yaocheng_p.jpg" alt="" /></a>
+															<a class="image featured"><img src="images/yaocheng_p1.jpg" alt="" /></a>
 															
 														</section>
 
