--- a/research.html
+++ b/research.html
@@ -277,7 +277,7 @@
                                                             <p align="left">Weitao Song, Yongtian Wang, Dewen Cheng, and Yue Liu, "Light field head-mounted display with correct focus cue using micro structure array," Chin. Opt. Lett. 12, 060010- (2014)
 </p>
 
-<p align="left">相关论文：Cheng Yao, Dewen Cheng, Tong Yang, and Yongtian Wang, "Design of an optical see-through light-field near-eye display using a discrete lenslet array," Opt. Express 26, 18292-18301 (2018)
+<p align="left">Cheng Yao, Dewen Cheng, Tong Yang, and Yongtian Wang, "Design of an optical see-through light-field near-eye display using a discrete lenslet array," Opt. Express 26, 18292-18301 (2018)
 </p>
 
 
