--- a/facility.html
+++ b/facility.html
@@ -163,6 +163,10 @@
                                             				<p>
 															</p>
                                             </div>
+                                                                                        <div class="row">
+                                            				<p>
+															</p>
+                                            </div>
                                             <div class="row">
 												<div class="col-6">
 
@@ -189,6 +193,28 @@
 
 												</div>
 											</div>
+                                                                                        <div class="row">
+                                            				<p>
+															</p>
+                                            </div>
+                                                                                        <div class="row">
+                                            				<p>
+															</p>
+                                            </div>
+ <div class="row">
+												<div class="col-6">
+
+													<!-- Feature -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images/gold.jpg" alt="" /></a>
+															<h3><a href="#">GOLD</a></h3>
+															<p align="justify">
+															实验室自上世纪80年代末开始国产光学设计软件的编写，并成功研制了GOLD光学设计软件，可对各种非对称、非常规复杂光学系统进行像质分析和结构优化。研究过程中发展了由国际著名光学理论权威 H. H. Hopkins教授首创的物像空间正则归一化坐标理论，在国际上首次将其应用于非常规复杂光学系统的分析设计。
+															</p>
+														</section>
+
+
+											</div>                                            
 										</div>
 									</section>
 
