--- a/facility.html
+++ b/facility.html
@@ -62,7 +62,7 @@
 										<h2 class="major"><span>硬件设施</span></h2>
                                         											
 												<p>
-													在北京理工大学的大力支持下，依托虚拟现实/增强现实技术及应用国家工程实验室、教育部光电成像重点实验室和北京市混合现实与新型显示工程技术研究中心，实验室拥有光学设计与VR/AR系统研制与实验的先进硬件条件。
+													在北京理工大学的大力支持下，依托教育部光电成像重点实验室、北京市混合现实与新型显示工程技术研究中心以及虚拟现实/增强现实技术及应用国家工程实验室，实验室拥有光学设计与VR/AR系统研制与实验的先进硬件条件。
 												</p>
 										<div>
 											<div class="row">
