--- a/members.html
+++ b/members.html
@@ -87,7 +87,7 @@
 															
 															<h3 align="left"><a href="wyt_personal.html">王涌天</a></h3>
                                                             <p class="class2" align="left">博士 教授 博士生导师</p>
-                                                            <p class="class2" align="left">国家杰青、教育部“长江学者”</p>
+                                                            <p class="class2" align="left">国家杰青、教育部创新团队带头人</p>
                                                             <p class="class2" align="left">研究方向：光学设计、技术光学、虚拟现实与增强现实</p>
                                                             <p class="class2" align="left">Email：wyt@bit.edu.cn</p>
 
