--- a/wyt_personal.html
+++ b/wyt_personal.html
@@ -73,7 +73,7 @@
 <h3 align="left">Email：wyt@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>王涌天，男，博士，北京理工大学光电学院教授。1986年获英国Reading大学物理系工学博士学位并继续做博士后研究工作。1988年回国后来到北京理工大学工作至今，其间先后应邀赴英国、西班牙、日本、美国有关大学进行合作研究。2000年获得国家杰出青年科学基金的资助，2002年受聘为教育部“长江学者奖励计划”特聘教授，2006年成为教育部创新团队带头人，2013年受聘“国家重点基础研究发展计划项目首席科学家”。</p>
+<p>王涌天，男，博士，北京理工大学光电学院教授。1986年获英国Reading大学物理系工学博士学位并继续做博士后研究工作。1988年回国后来到北京理工大学工作至今，其间先后应邀赴英国、西班牙、日本、美国有关大学进行合作研究。2000年获得国家杰出青年科学基金的资助，2002年受聘为教育部特聘教授，2006年成为教育部创新团队带头人，2013年受聘“国家重点基础研究发展计划项目首席科学家”。</p>
 
 
 <h3>研究领域</h3>
