--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -88,9 +88,9 @@ a:active {
 <h3 align="left">Email：cdwlxk@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>程德文，男，博士，北京理工大学光电学院教授。国内最早从事自由曲面光学系统设计、虚拟现实（VR）和增强现实（AR）头戴显示技术的研究，对VR和AR头戴显示技术中的关键科学问题进行了深入探讨，大幅提高AR显示系统的显示效果和整体性能指标。申请专利近100项，包括美国和欧洲授权发明专利9项，部分专利成功转化并得到国外知名企业多年付费使用。发表80余篇高水平学术论文，多次应邀参加国际会议特邀报告，在国际上得到大量引用并获得很高的评价，不仅对该领域有突出的学术贡献，还产生了显著的经济效益和社会价值，因此获评多项个人荣誉和人才计划。承担国家973、863子课题、国家自然科学基金、国家重点研发计划等项目20余项。</p>
+<p>程德文，男，博士，教授，博导。国内最早从事自由曲面光学系统设计、虚拟现实（VR）和增强现实（AR）头戴显示技术的研究，对VR和AR头戴显示技术中的关键科学问题进行了深入探讨，大幅提高AR显示系统的显示效果和整体性能指标。申请专利近100项，包括美国和欧洲授权发明专利9项，部分专利成功转化并得到国外知名企业多年付费使用。发表80余篇高水平学术论文，多次应邀参加国际会议特邀报告，在国际上得到大量引用并获得很高的评价，不仅对该领域有突出的学术贡献，还产生了显著的经济效益和社会价值，因此获评多项个人荣誉和人才计划。承担国家973、863子课题、国家自然科学基金、国家重点研发计划等项目20余项。</p>
 <p>攻读博士学位期间多次获得国际奖项，包括连续获得国际光学工程协会(SPIE)2009和2010年“Michael Kidger Memorial Scholarship”和“Optical Design and Engineering”奖学金，该两项奖项每年全球范围内仅表彰一名光学设计领域有突出贡献的获奖者。获得2009年美国Synopsys公司颁发的全美光学设计竞赛特等奖、2010年中国光学学会颁发的“王大珩高校光学奖”。博士学位论文被评为北京市优秀博士学位论文。</p>
-<p>研究成果获得了多个科技奖项，入选2011年“中国光学重要成果”，获评中国仪器仪表学会金国藩青年学子奖，2017年度光学工程学会创新技术1等奖、2019年度中国产学研合作创新成果奖1等奖(序3)、2019年度北京市技术发明奖1等奖(序2)。个人先后入选教育部新世纪优秀人才计划(2012)、中组部青年拔尖人才计划(2014)，获批自然科学基金优秀青年科学基金(2018)。</p>
+<p>研究成果获得多项科技奖励，入选2011年“中国光学重要成果”，获评中国仪器仪表学会金国藩青年学子奖，2017年度光学工程学会创新技术1等奖、2019年度中国产学研合作创新成果奖1等奖(序3)、2019年度北京市技术发明奖1等奖(序2)。先后入选教育部新世纪优秀人才计划(2012)、中组部青年拔尖人才计划(2014)，获批自然科学基金优秀青年科学基金(2018)。</p>
 <h3>教育经历</h3>
 <p>2007.08-2010.08，美国亚利桑那大学，光学工程专业，博士</p>
 <p>2004.09-2011.06，北京理工大学，光学工程专业，博士</p>
