--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,7 @@ a:active {
 											<section>
 											
 												<p>
-													近年来发表论文80余篇，SCI收录40余篇，授权国家发明专利40项(11项转化) ，国际专利5项(全部转化)。
+													近年来发表论文70余篇，SCI收录40余篇，授权国家发明专利40项(11项转化) ，国际专利5项(全部转化)。
 												</p>
 											</section>
 
@@ -298,7 +298,7 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>部分已授权发明专利</span></h2>
+										<h2 class="major"><span>部分已授权专利</span></h2>
 <p>[1]	程德文, 王涌天. 目镜, 申请日2009/7/20, 授权日2011/04/27, 中国, 专利号: ZL200910089422.X。</p>
 <p>[2]	程德文, 王涌天, 华宏. 宽视场高分辨率拼接式头盔显示装置, 申请日2010/04/30, 授权日2015/7/22, 中国, 专利号: ZL201080015063.4。</p>
 <p>[3]	程德文, 王涌天, 华宏. Wide angle and high resolution tiled head-mounted display device, 申请日2010/04/30, 授权日2016/1/26, 美国, 专利号: US9244277B2。</p>
