--- a/members.html
+++ b/members.html
@@ -666,7 +666,7 @@
 															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2018</p>
                                                             <p class="class2" align="left">研究方向：含相位面系统的光学设计</p>
-                                                            <p class="class2" align="left">本科：北京理工大学</p>
+                                                            <p class="class2" align="left">本科：电子科技大学</p>
                                                             <p class="class2" align="left">本科专业：光电信息科学与工程</p>
                                                             <p class="class2" align="left">Email：dyzbit@163.com</p>
 														</section>
