--- a/research.html
+++ b/research.html
@@ -486,7 +486,7 @@
 													<!-- Feature -->
 														<section class="box feature">
 															
-															<h3 align="left">基于中间照度分布传输方法(Iterative irradiance transport, IIT)的自由曲面构建</h3>
+															<h3 align="left">基于中间照度分布传输方法(Intermediate irradiance transport, IIT)的自由曲面构建</h3>
                                                             <p align="left">IIT方法将复杂的自由曲面光学构建问题转化为一个相位恢复问题。这种转化主要通过在紧邻自由曲面透镜后表面引入一个中间照度分布来实现。基于中间照度分布和目标照度分布间的相位恢复，可以获得一个光束映射关系，通过这个光束映射关系可以构建一个自由曲面透镜。获得的自由曲面透镜后，可以更新紧邻其后表面的中间照度分布。不断迭代直至获得性能良好的自由曲面透镜。该方法将自由曲面透镜的构建过程大大简化，可以实现复杂的光分布调控，如图所示。论文已发表于Optics Letters，并被评选为Editor’s pick 文章。</p>
                                                             <p align="left">相关论文：Zexin Feng, Dewen Cheng, and Yongtian Wang. Transferring freeform lens design into phase retrieval through intermediate irradiance transport. Optics Letters, 2019, 44(22): 5501-5504. (SCI, IF=3.887)</p>
 
