--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,7 @@ a:active {
 
 <h3>2020年</h3>
                                        
+<p> [52]	Zexin Feng, Dewen Cheng, Yongtian Wang*, “Iterative freeform lens design for prescribed irradiance on curved target,” <strong>Opto-Electronic Advances</strong>, 3(7): 200010, 2020. <a href="https://doi.org/10.29026/oea.2020.200010"> DOI: 10.29026/oea.2020.200010</a> <strong>(Cover paper)</strong></p>
 
 <p> [51]	Luo Gu, Dewen Cheng*, Yue Liu, Junhao Ni, Tong Yang, Yongtian Wang, “Design and fabrication of an off-axis four-mirror system for head-up displays,” <strong>Applied Optics</strong>, 59(16): 4893-4900, 2020. <a href="https://dx.doi.org/10.1364/AO.392602"> DOI: 10.1364/AO.392602</a></p>
 
@@ -117,7 +118,7 @@ a:active {
 <p>[47]	 Zhuojing Zhao, Dewen Cheng*, Tong Yang, Qiwei Wang, Qichao Hou, Luo Gu, Yongtian Wang, “Design and evaluation of a biocular system,” <strong>Applied Optics</strong>, 58(28): 7851-7857，2019.<a href="https://dx.doi.org/10.1364/AO.58.007851"> DOI: 10.1364/AO.58.007851 </a></p>
 
 <p>[46]	Tong Yang*, Dewen Cheng, and Yongtian Wang, “Freeform and planar phase elements combine for better imaging optics,” <strong>Laser Focus World</strong>, 55(9): 32-35, 2019.
-<p>[45]	Tong Yang, Dewen Cheng, Yongtian Wang*. “Direct generation of starting points for freeform off-axis three-mirror imaging system design using neural network based deep-learning,” <strong>Optics Express</strong>, 27(12): 17228-17238, 2019.<a href="https://dx.doi.org/10.1364/OE.27.017228"> DOI: 10.1364/OE.27.017228</a></p>
+<p>[45]	Tong Yang*, Dewen Cheng, Yongtian Wang. “Direct generation of starting points for freeform off-axis three-mirror imaging system design using neural network based deep-learning,” <strong>Optics Express</strong>, 27(12): 17228-17238, 2019.<a href="https://dx.doi.org/10.1364/OE.27.017228"> DOI: 10.1364/OE.27.017228</a></p>
 
 <p>[44]	Zexin Feng*, Dewen Cheng, Yongtian Wang. “Iterative wavefront tailoring to simplify freeform optical design for prescribed irradiance,” <strong>Optics Letters</strong>, 44(9): 2274-2277, 2019.<a href="https://dx.doi.org/10.1364/OL.44.002274"> DOI: 10.1364/OL.44.002274</a></p>
 
@@ -131,7 +132,7 @@ a:active {
                                         
                                       <p>[41]	Luo Gu, Dewen Cheng*, Qiwei Wang, Qichao Hou, and Yongtian Wang. “Design of a two-dimensional stray-light-free geometrical waveguide head-up display,” <strong>Applied Optics</strong>, 57(31): 9246-8256, 2018.<a href="https://dx.doi.org/10.1364/AO.57.009246">DOI: 10.1364/AO.57.009246</a></p>
 
-<p>[40]	Tong Yang, Dewen Cheng*, and Yongtian Wang. “Design method of nonsymmetric imaging systems consisting of multiple flat phase elements,” <strong>Optics Express</strong>, 26(19): 25347-25363, 2018.<a href="https://dx.doi.org/10.1364/OE.26.025347"> DOI: 10.1364/OE.26.025347</a></p>
+<p>[40]	Tong Yang*, Dewen Cheng, and Yongtian Wang*. “Design method of nonsymmetric imaging systems consisting of multiple flat phase elements,” <strong>Optics Express</strong>, 26(19): 25347-25363, 2018.<a href="https://dx.doi.org/10.1364/OE.26.025347"> DOI: 10.1364/OE.26.025347</a></p>
 
 </p>[39]	Wei Lou, Dewen Cheng*, Luo Gu, Weihong Hou, and Yongtian Wang. “Optical design and evaluation of alvarez-type vision-training system,” <strong>Chinese Optics Letters</strong>, 16(7): 072201, 2018.<a href="https://www.osapublishing.org/col/abstract.cfm?uri=col-16-7-072201"> DOI: 10.3788/COL201816.072201</a></p>
 
