--- a/news.html
+++ b/news.html
@@ -59,7 +59,18 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
                                         
+<p>[2020-07-22] 我们有关利用迭代波前剪裁方法(Iterative irradiance transport, IIT)实现3D表面上的光分布调控的论文在线发表于<strong>Opto-Electronic Advances</strong>，并被选为当期的<strong>封面文章</strong>。</p>
 
+<p>[2020-07-08] 恭喜顾罗同学被评为2020年北京理工大学优秀毕业生。</p>
+
+<p>[2020-06-26] 恭喜顾罗同学顺利通过博士学位论文答辩，赵卓静、张辰琛同学通过硕士学位论文答辩。感谢三位同学为实验室作出的贡献，祝三位同学前程似锦！</p>
+<div class="row"><div class="col-6"><section class="box feature">
+<a class="image featured"><img src="images/202006dabian1.png" alt="" /></a>
+</section></div>
+<div class="col-6"><section class="box feature">
+<a class="image featured"><img src="images/202006dabian2.png" alt="" /></a>
+</section></div>
+</div>
                                         
 <p>[2020-05-27] 我们有关自由曲面离轴四反HUD系统设计加工的论文在线发表于<strong>Applied Optics</strong>。</p>
 
