--- a/news.html
+++ b/news.html
@@ -59,7 +59,7 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
                                         
-<p>[2020-07-22] 我们有关利用迭代波前剪裁方法(Iterative irradiance transport, IIT)实现3D表面上的光分布调控的论文在线发表于<strong>Opto-Electronic Advances</strong>，并被选为当期的<strong>封面文章</strong>。</p>
+<p>[2020-07-22] 我们有关利用新型迭代波前剪裁方法(iterative wavefront tailoring，IWT)实现3D表面上的光分布调控的论文在线发表于<strong>Opto-Electronic Advances</strong>，并被选为当期的<strong>封面文章</strong>。</p>
 
 <p>[2020-07-08] 恭喜顾罗同学被评为2020年北京理工大学优秀毕业生。</p>
 
