--- a/news.html
+++ b/news.html
@@ -59,12 +59,18 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-<p>[2020-08-31] 我们有关设计实现给定能量比离散光斑阵列的自由曲面分束器的论文在线发表于<strong>《光学学报》</strong>。</p>
+<p>[2020-08-31] 我们有关设计实现给定能量比离散光斑阵列的自由曲面分束器的论文在线发表于<strong>《光学学报》</strong>，并被选为当期的<strong>封面文章</strong>。</p>
+<div class="row"><div class="col-4"><section class="box feature">
+<a class="image featured"><img src="images/17_pic_small.jpg" alt="" /></a>
+</section></div></div>
 
-<p>[2020-08-10] 2021年是《光学学报》创刊四十周年，学报编辑部特邀课题组撰写题为<strong>《自由曲面成像光学系统设计：理论、发展与应用》的长文综述</strong>。文章概述了自由曲面成像系统设计方面取得的进展、应用，并对未来的发展方向进行了总结与展望。<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ7baf44640789be49">论文链接</a></p>
+<p>[2020-08-10] 2021年是《光学学报》创刊四十周年，<strong>学报编辑部特邀课题组撰写题为《自由曲面成像光学系统设计：理论、发展与应用》的长文综述</strong>。文章概述了自由曲面成像系统设计方面取得的进展、应用，并对未来的发展方向进行了总结与展望。<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ7baf44640789be49">论文链接</a></p>
 
                                        
 <p>[2020-07-22] 我们有关利用新型迭代波前剪裁方法(iterative wavefront tailoring，IWT)实现3D表面上的光分布调控的论文在线发表于<strong>Opto-Electronic Advances</strong>，并被选为当期的<strong>封面文章</strong>。</p>
+<div class="row"><div class="col-4"><section class="box feature">
+<a class="image featured"><img src="images/oeacover.jpg" alt="" /></a>
+</section></div></div>
 
 <p>[2020-07-08] 恭喜顾罗同学被评为2020年北京理工大学优秀毕业生。</p>
 
