--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,12 @@ a:active {
 
 
 <h3>2020年</h3>
+
+<p class="class2">[54]	司佳, 冯泽心*, 程德文, 王涌天. “实现给定能量比离散光斑阵列的自由曲面分束器,” <strong>光学学报</strong>, 40(17): 1722004, 2020.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (封面文章)</strong></p>
+<p>Jia Si, Zexin Feng*, Dewen Cheng, Yongtian Wang. “Freeform Surface Beam Splitter for Discrete Spot Array with Prescribed Energy Proportion,” <strong>Acta Optica Sinica</strong>, 40(17): 1722004, 2020. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (Cover paper)</strong></p>
+
+<p class="class2">[53]	杨通, 段璎哲, 程德文, 王涌天*. 自由曲面成像光学系统设计:理论、发展与应用,” <strong>光学学报</strong>, 41(1): 0108001, 2020.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ7baf44640789be49">DOI: 10.3788/AOS202141.0108001</a><strong> (特邀综述)</strong></p>
+<p>Tong Yang, Yingzhe Duan, Dewen Cheng, Yongtian Wang*. “Freeform Imaging Optical System Design: Theories, Development, and Applications,” <strong>Acta Optica Sinica</strong>, 41(1): 0108001, 2020. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ7baf44640789be49">DOI: 10.3788/AOS202141.0108001</a><strong> (Invited review)</strong></p>
                                        
 <p> [52]	Zexin Feng, Dewen Cheng, Yongtian Wang*, “Iterative freeform lens design for prescribed irradiance on curved target,” <strong>Opto-Electronic Advances</strong>, 3(7): 200010, 2020. <a href="https://doi.org/10.29026/oea.2020.200010"> DOI: 10.29026/oea.2020.200010</a> <strong>(Cover paper)</strong></p>
 
