--- a/members.html
+++ b/members.html
@@ -182,6 +182,7 @@
 															
 															<h3 align="left"><a href="yt_personal.html">杨通</a></h3>
                                                             <p class="class2" align="left">博士 特别副研究员 硕士生导师</p>
+<p class="class2" align="left">入选中国科协青年人才托举工程（青托）</p>
                                                            
                                                             <p class="class2" align="left">研究方向：光学设计、自由曲面光学和光学成像</p>
                                                             <p class="class2" align="left">本科：天津大学</p>
