--- a/news.html
+++ b/news.html
@@ -86,6 +86,8 @@
 
 <p>[2020-02-19] 实验室教师杨通入选第五届中国科协<strong>青年人才托举工程</strong>项目。</p>
 
+<p>[2020-01-20] 我们有关设计包含自由曲面基底相位元件成像系统的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
+
 <p>[2020-01-11] 实验室与其它单位合作（北理工为第一完成单位）的成果“虚拟现实与增强现实头戴显示关键技术及应用”获得<strong>2019年北京市科学技术奖-技术发明奖一等奖</strong>。</p>
 
 <div class="row"><div class="col-6"><section class="box feature">
