--- a/yt_personal.html
+++ b/yt_personal.html
@@ -73,7 +73,7 @@
 <h3 align="left">Email：yangtong@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>杨通，男，博士，北京理工大学光电学院特别副研究员。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像等方面。主持或参与国家自然科学基金、国家重点研发计划等项目。在Light: Science & Applications、Optics Express等期刊发表论文20余篇。已获得授权发明专利27项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。</p>
+<p>杨通，男，博士，北京理工大学光电学院特别副研究员。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像等方面。主持或参与国家自然科学基金、国家重点研发计划等项目。在Light: Science & Applications（Nature旗下期刊，2020影响因子13.714）、Optics Express等期刊发表论文20余篇。已获得授权发明专利27项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。</p>
 <h3>教育经历</h3>
 <p>2012.08-2017.07，清华大学，光学工程专业，博士</p>
 <p>2008.09-2012.06，天津大学，（光电）信息工程专业，学士</p>
@@ -109,7 +109,7 @@
 
 <p>[7] Tong Yang, Dewen Cheng*, and Yongtian Wang, "Aberration analysis for freeform surface terms overlay on general decentered and tilted optical surfaces," Optics Express 26(6), 7751-7770 (2018).</p>
 
-<p>[8] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” Light: Science & Applications 6, e17081 (2017). <strong>(Nature旗下期刊，2019影响因子14.000)</strong></p>
+<p>[8] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” Light: Science & Applications 6, e17081 (2017). <strong>(Nature旗下期刊，2020影响因子13.714)</strong></p>
 
 <p>[9] Tong Yang, Jun Zhu*, and Guofan Jin, “Design of freeform imaging systems with linear field-of-view using a construction and iteration process,” Optics Express 22, 3362-3374 (2014).</p>
 
