--- a/news.html
+++ b/news.html
@@ -59,6 +59,24 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+
+<p>[2020-09-10] 北京理工大学、歌尔股份有限公司、北京联想软件有限公司等单位联合申报的成果“虚拟现实与增强现实头戴显示关键技术及应用”获得<strong>2019年北京市科学技术奖-技术发明奖一等奖</strong>。</p>
+<div class="row"><div class="col-4"><section class="box feature">
+<a class="image featured"><img src="images/bjaward111.jpg" alt="" /></a>
+</section></div>
+<div class="col-4"><section class="box feature">
+<a class="image featured"><img src="images/bjaward222.jpg" alt="" /></a>
+</section></div>
+</div>
+
+
+<p>[2020-09-09] 2020年9月5日至6日，第六届中国国际“互联网+”大学生创新创业大赛（北京赛区）决赛在线上举行，共有192个主赛道项目和35个“青年红色筑梦之旅”赛道项目同场竞技。经过激烈的角逐，北京理工大学参赛项目“耐德佳：头戴显示光学解决方案全球领先者”斩获亚军。<a href="https://mp.weixin.qq.com/s/jGs8aF622Kn5p5MLq8RIBg">新闻链接</a></p>
+
+<div class="row"><div class="col-6"><section class="box feature">
+<a class="image featured"><img src="images/hulianwangjia.jpg" alt="" /></a>
+</section></div></div>
+
+
 <p>[2020-08-31] 我们有关设计实现给定能量比离散光斑阵列的自由曲面分束器的论文在线发表于<strong>《光学学报》</strong>，并被选为当期的<strong>封面文章</strong>。</p>
 <div class="row"><div class="col-4"><section class="box feature">
 <a class="image featured"><img src="images/17_pic_small.jpg" alt="" /></a>
@@ -88,11 +106,6 @@
 
 <p>[2020-01-20] 我们有关设计包含自由曲面基底相位元件成像系统的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 
-<p>[2020-01-11] 实验室与其它单位合作（北理工为第一完成单位）的成果“虚拟现实与增强现实头戴显示关键技术及应用”获得<strong>2019年北京市科学技术奖-技术发明奖一等奖</strong>。</p>
-
-<div class="row"><div class="col-6"><section class="box feature">
-<a class="image featured"><img src="images/bjaward2019.jpg" alt="" /></a>
-</section></div></div>
 
 <p>[2019-12-31] 由中国产学研合作促进会主办的第十三届中国产学研合作创新大会在北京举行。由北理工光电学院王涌天教授牵头，歌尔股份有限公司、北京理工大学、北京联想软件有限公司、北京耐德佳显示技术有限公司、北京小鸟看看科技有限公司等单位共同合作完成的“虚拟现实与增强现实头戴显示技术研究及产业化”项目荣获<strong>2019年中国产学研合作创新成果奖一等奖</strong>。</p>
 <div class="row"><div class="col-6"><section class="box feature">
