--- a/members.html
+++ b/members.html
@@ -650,7 +650,7 @@
 														<section class="box feature">
 															
 															<h3 align="left">倪俊豪</h3>
-															<p class="class2" align="left">博士研究生</p>
+															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2018</p>
                                                             <p class="class2" align="left">研究方向：自由曲面设计与公差分析</p>
                                                             <p class="class2" align="left">本科：北京理工大学</p>
