--- a/news.html
+++ b/news.html
@@ -59,6 +59,8 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2020-09-26] 我们有关利用强化学习和聚类进行自由曲面成像系统设计与经验总结的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
+<p>[2020-09-20] 欢迎李阳、李浩然、李丹阳、马骁、汤海松、王永东、肖钰皓、张甜、周丽军9位同学加入实验室团队！</p>
 
 <p>[2020-09-10] 北京理工大学、歌尔股份有限公司、北京联想软件有限公司等单位联合申报的成果“虚拟现实与增强现实头戴显示关键技术及应用”获得<strong>2019年北京市科学技术奖-技术发明奖一等奖</strong>。</p>
 <div class="row"><div class="col-4"><section class="box feature">
