--- a/members.html
+++ b/members.html
@@ -181,7 +181,7 @@
                                                             <p class="class2" align="left">博士 特别副研究员 硕士生导师</p>
 <p class="class2" align="left">入选中国科协青年人才托举工程（青托）</p>
                                                            
-                                                            <p class="class2" align="left">研究方向：光学设计、自由曲面光学和新型光学成像</p>
+                                                            <p class="class2" align="left">研究方向：自由曲面光学、光学设计、新型光学成像、机器学习</p>
                                                             <p class="class2" align="left">本科：天津大学</p>
                                                             <p class="class2" align="left">博士：清华大学</p>
                                                             <p class="class2" align="left">Email：yangtong@bit.edu.cn</p>
