--- a/yt_personal.html
+++ b/yt_personal.html
@@ -84,7 +84,7 @@
 <p>2017.08-至今，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
 
 <h3>研究领域</h3>
-<p>光学设计、自由曲面光学、光学成像、机器学习、衍射光学</p>
+<p>自由曲面光学、光学设计、光学成像、机器学习、衍射光学</p>
 
 <h3>主讲课程</h3>
 <p>主讲本科生课程《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
