--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,8 @@ a:active {
 
 <h3>2020年</h3>
 
+<p>[56]	Qiwei Wang, Dewen Cheng*, Qichao Hou, Luo Gu, and Yongtian Wang, "Design of an ultra-thin, wide-angle, stray-light-free near-eye display with a dual-layer geometrical waveguide," <strong>Opt. Express</strong> 28, 35376-35394 (2020)<a href="https://doi.org/10.1364/OE.409006"> DOI: 10.1364/OE.409006</a></p>
+
 <p>[55]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28(20): 30309-30323, 2020.<a href="https://doi.org/10.1364/OE.404808"> DOI: 10.1364/OE.404808</a></p>
 
 <p class="class2">[54]	司佳, 冯泽心*, 程德文, 王涌天. “实现给定能量比离散光斑阵列的自由曲面分束器,” <strong>光学学报</strong>, 40(17): 1722004, 2020.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (封面文章)</strong></p>
@@ -266,7 +268,11 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>会议论文</span></h2>
-
+<p>[27] Mao Zhou, Dewen Cheng*, Qiwei Wang, Hailong Chen, Yongtian Wang. Design of an off-axis four-mirror system for automotive head-up display[C]. Proc. SPIE 11565: 1156507, 2020.</p>
+<p>[26] Chenchen Zhang, Dewen Cheng*, Junguo Lin, Yongtian Wang. Retinal projection display system based on MEMS scanning projector and conicoid curved semi-reflective mirror[C]. Proc. SPIE 11565: 11456506, 2020.</p>
+<p>[25] Wenchen Chen, Tong Yang*, Dewen Cheng, Yongtian Wang. Network training parameters exploration for generating starting points of freeform reflective imaging system design based on machine learning[C]. Proc. SPIE 11548: 115480P, 2020.</p>
+<p>[24] Weixing Lei, Dewen Cheng*, Tong Yang, Yue Liu, Hailong Chen, Yongtian Wang. Design of a compact and high-resolution image scanner with large depth-of-field based on compound eye system[C]. Proc. SPIE 11548: 115481V, 2020.</p>
+<p>[23] Ying Yuan, Dewen Cheng*, Qiwei Wang, Hailong Chen, Yongtian Wang. Design of wide field of view pinhole lens for VR/AR image quality test[C]. Proc. SPIE 11571: 115710F, 2020.</p>
 <p>[22] Yingzhe Duan, Tong Yang*, Dewen Cheng, Yongtian Wang. Point-by-point design and evaluation of different system configurations consisting of freeform surfaces and/or flat phase elements[C]. Proc. SPIE 11434: 1143407, 2020.</p>
 <p>[21] Junhao Ni, Tong Yang*, Dewen Cheng, Yongtian Wang. Design of freeform nonsymmetric three-mirror systems using Gaussian basis functions freeform surfaces[C]. Proc. SPIE 11434: 11434078, 2020.<strong>(Best Student Paper Award)</strong></p>
 <p>[20] Cheng Yao, Yue Liu, Dewen Cheng, Yongtian Wang, "Compact Light Field Augmented Reality Display with Eliminated Stray Light using Discrete Structures," 2019 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct), pp. 245-250, 2019. <strong>(Best Poster Award)</strong></p>
