--- a/news.html
+++ b/news.html
@@ -59,6 +59,8 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+
+<p>[2020-11-06] 我们有关实现超薄、大视场、消杂光的近眼显示双层波导设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2020-09-26] 我们有关利用强化学习和聚类进行自由曲面成像系统设计与经验总结的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2020-09-20] 欢迎李阳、李浩然、李丹阳、马骁、汤海松、王永东、肖钰皓、张甜、周丽军9位同学加入实验室团队！</p>
 
