--- a/news.html
+++ b/news.html
@@ -59,7 +59,12 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2020-12-16] 欢迎魏利博士加入实验室团队进行博士后研究！</p>
+<p>[2020-11-20] 2020年11月17日至20日，以“我敢闯 我会创”为主题的第六届中国国际“互联网+”大学生创新创业大赛总决赛在华南理工大学举行。北理工光电学院参赛队伍：耐德佳——近眼显示光学解决方案全球领先者 （指导老师：程德文教授、王涌天教授、王伟副研究员）取得银奖！本届比赛汇聚了117个国家和地区、4186所学校147万个项目、631万人报名参赛，453个项目进入总决赛。<a href="http://opt.bit.edu.cn/dtxx/b190232.htm">新闻链接</a></p>
 
+<div class="row"><div class="col-6"><section class="box feature">
+<a class="image featured"><img src="images/hulianwangplus2020.jpg" alt="" /></a>
+</section></div></div>
 <p>[2020-11-06] 我们有关实现超薄、大视场、消杂光的近眼显示双层波导设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2020-09-26] 我们有关利用强化学习和聚类进行自由曲面成像系统设计与经验总结的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2020-09-20] 欢迎李阳、李浩然、李丹阳、马骁、汤海松、王永东、肖钰皓、张甜、周丽军9位同学加入实验室团队！</p>
