--- a/yt_personal.html
+++ b/yt_personal.html
@@ -95,47 +95,53 @@
 <h3>代表性学术成果</h3>
 <p></p>
 
-<p>[1] Tong Yang*, Dewen Cheng, and Yongtian Wang, "Direct generation of starting points for freeform off-axis three-mirror imaging system design using neural network based deep-learning," Optics Express 27, 17228-17238 (2019).</p>
+<p>[1]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28(20): 30309-30323, 2020.</p>
 
-<p>[2] Yingzhe Duan, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method for nonsymmetric imaging optics consisting of freeform-surface-substrate phase elements," Optics Express 28, 1603-1620 (2020).</p>
+<p>[2] Tong Yang*, Dewen Cheng, and Yongtian Wang, "Direct generation of starting points for freeform off-axis three-mirror imaging system design using neural network based deep-learning," <strong>Optics Express</strong> 27, 17228-17238 (2019).</p>
 
-<p>[3] Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Description and tolerance analysis of freeform surface figure error using specific-probability-distributed Gaussian radial basis functions," Optics Express 27, 31820-31839 (2019).</p>
+<p>[3] Yingzhe Duan, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method for nonsymmetric imaging optics consisting of freeform-surface-substrate phase elements," <strong>Optics Express</strong> 28, 1603-1620 (2020).</p>
 
-<p>[4] Tong Yang*, Dewen Cheng, and Yongtian Wang, “Freeform and planar phase elements combine for better imaging optics,” Laser Focus World 55(9), 32-35 (2019).</p>
+<p class="class2">[4]	杨通, 段璎哲, 程德文, 王涌天*. 自由曲面成像光学系统设计:理论、发展与应用,” <strong>光学学报</strong>, 41(1): 0108001, 2020.<strong> (特邀综述)</strong></p>
+<p>Tong Yang, Yingzhe Duan, Dewen Cheng, Yongtian Wang*. “Freeform Imaging Optical System Design: Theories, Development, and Applications,” <strong>Acta Optica Sinica</strong>, 41(1): 0108001, 2020. <strong> (Invited review)</strong></p>
 
-<p>[5] Tong Yang*, Dewen Cheng, and Yongtian Wang*, "Design method of nonsymmetric imaging systems consisting of multiple flat phase elements," Optics Express 26, 25347-25363 (2018).</p>
 
-<p>[6] Tong Yang, Dewen Cheng, and Yongtian Wang*, "Freeform imaging spectrometer design using a point-by-point design method," Applied Optics 57, 4718-4727 (2018).</p>
+<p>[5] Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Description and tolerance analysis of freeform surface figure error using specific-probability-distributed Gaussian radial basis functions," <strong>Optics Express</strong> 27, 31820-31839 (2019).</p>
 
-<p>[7] Tong Yang, Dewen Cheng*, and Yongtian Wang, "Aberration analysis for freeform surface terms overlay on general decentered and tilted optical surfaces," Optics Express 26(6), 7751-7770 (2018).</p>
+<p>[6] Tong Yang*, Dewen Cheng, and Yongtian Wang, “Freeform and planar phase elements combine for better imaging optics,” <strong>Laser Focus World</strong> 55(9), 32-35 (2019).</p>
 
-<p>[8] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” Light: Science & Applications 6, e17081 (2017). <strong>(Nature旗下期刊，2020影响因子13.714)</strong></p>
+<p>[7] Tong Yang*, Dewen Cheng, and Yongtian Wang*, "Design method of nonsymmetric imaging systems consisting of multiple flat phase elements," <strong>Optics Express</strong> 26, 25347-25363 (2018).</p>
 
-<p>[9] Tong Yang, Jun Zhu*, and Guofan Jin, “Design of freeform imaging systems with linear field-of-view using a construction and iteration process,” Optics Express 22, 3362-3374 (2014).</p>
+<p>[8] Tong Yang, Dewen Cheng, and Yongtian Wang*, "Freeform imaging spectrometer design using a point-by-point design method," <strong>Applied Optics</strong> 57, 4718-4727 (2018).</p>
 
-<p>[10] Tong Yang, Jun Zhu*, Wei Hou, and Guofan Jin, “Design method of freeform off-axis reflective imaging systems with a direct construction process," Optics Express 22, 9193-9205 (2014).</p>
+<p>[9] Tong Yang, Dewen Cheng*, and Yongtian Wang, "Aberration analysis for freeform surface terms overlay on general decentered and tilted optical surfaces," <strong>Optics Express</strong> 26(6), 7751-7770 (2018).</p>
 
-<p>[11] Tong Yang, Jun Zhu*, and Guofan Jin, “Nodal aberration properties of co-axial imaging systems using Zernike polynomial surfaces,” Journal of the Optical Society of America A 32, 822-836 (2015).</p>
+<p>[10] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” <strong>Light: Science & Applications</strong> 6, e17081 (2017). <strong>(Nature旗下期刊，2020影响因子13.714)</strong></p>
 
-<p>[12] Tong Yang, Jun Zhu*, Xiaofei Wu, and Guofan Jin, “Direct design of freeform surfaces and freeform imaging systems with a point-by-point three-dimensional construction-iteration method,” Optics Express 23, 10233-10246 (2015).</p>
+<p>[11] Tong Yang, Jun Zhu*, and Guofan Jin, “Design of freeform imaging systems with linear field-of-view using a construction and iteration process,” <strong>Optics Express</strong> 22, 3362-3374 (2014).</p>
 
-<p>[13] Tong Yang, Jun Zhu*, and Guofan Jin, “Starting configuration design method of freeform imaging and afocal systems with a real exit pupil," Applied Optics 55, 345-353 (2016).</p>
+<p>[12] Tong Yang, Jun Zhu*, Wei Hou, and Guofan Jin, “Design method of freeform off-axis reflective imaging systems with a direct construction process," <strong>Optics Express</strong> 22, 9193-9205 (2014).</p>
 
-<p>[14] Tong Yang, Jun Zhu*, and Guofan Jin, “Compact freeform off-axis three-mirror imaging system based on the integration of primary and tertiary mirrors on one single surface," Chinese Optics Letters 14, 060801 (2016).</p>
+<p>[13] Tong Yang, Jun Zhu*, and Guofan Jin, “Nodal aberration properties of co-axial imaging systems using Zernike polynomial surfaces,” <strong>Journal of the Optical Society of America A</strong> 32, 822-836 (2015).</p>
 
-<p>[15] Tong Yang, Jun Zhu*, and Guofan Jin, “Design of a freeform dual field-of-views, dual focal lengths off-axis three-mirror imaging system with a point-by-point construction-iteration process," Chinese Optics Letters 14, 060801 (2016).</p>
+<p>[14] Tong Yang, Jun Zhu*, Xiaofei Wu, and Guofan Jin, “Direct design of freeform surfaces and freeform imaging systems with a point-by-point three-dimensional construction-iteration method,” <strong>Optics Express</strong> 23, 10233-10246 (2015).</p>
 
-<p>[16] Tong Yang, Guofan Jin, and Jun Zhu*, “Design of image-side telecentric freeform imaging system using point-by-point construction-iteration process”. Chinese Optics Letters 15, 062202 (2017).</p>
+<p>[15] Tong Yang, Jun Zhu*, and Guofan Jin, “Starting configuration design method of freeform imaging and afocal systems with a real exit pupil," <strong>Applied Optics</strong> 55, 345-353 (2016).</p>
 
-<p>[17]	Jun Zhu*, Tong Yang, and Guofan Jin, “Design method of surface contour for a freeform lens with wide linear field-of-view,” Optics Express 21, 26080-26092 (2013).</p>
-<p>[18]	Jun Zhu*, Xiaofei Wu, Tong Yang, and Guofan Jin, "Generating optical freeform surfaces considering both coordinates and normals of discrete data points," Journal of the Optical Society of America A 31, 2401-2408 (2014).</p>
-<p>[19]	Wei Hou, Jun Zhu*, Tong Yang, and Guofan Jin, “Construction method through forward and reverse ray tracing for a design of ultra-wide linear field-of-view off-axis freeform imaging systems,” Journal of Optics 17, 055603 (2015).</p>
-<p>[20]	Xiaofei Wu, Jun Zhu*, Tong Yang, and Guofan Jin, “Transverse image translation using an optical freeform single lens,” Applied Optics 54, E55-E62 (2015).</p>
-<p>[21]	Cheng Yao, Dewen Cheng*, Tong Yang, and Yongtian Wang, "Design of an optical see-through light-field near-eye display using a discrete lenslet array," Optics Express 26, 18292-18301 (2018).</p>
-<p>[22]	Luo Gu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Shanshan Wang, Tong Yang, and Yongtian Wang*, "Design of a uniform-illumination two-dimensional waveguide head-up display with thin plate compensator," Optics Express 27, 12692-12709 (2019).</p>
-<p>[23]	Yue Liu, Dewen Cheng*, Tong Yang, and Yongtian Wang, "High precision integrated projection imaging optical design based on microlens array," Optics Express 27, 12264-12281 (2019).</p>
-<p>[24]	Zhuojing Zhao, Dewen Cheng*, Tong Yang, Qiwei Wang, Qichao Hou, Luo Gu, and Yongtian Wang, "Design and evaluation of a biocular system," Applied Optics 58, 7851-7857 (2019).</p>
-<p>[25]	Luo Gu, Dewen Cheng*, Yue Liu, Junhao Ni, Tong Yang, and Yongtian Wang, "Design and fabrication of an off-axis four-mirror system for head-up displays," Appl. Opt. 59, 4893-4900 (2020).</p>
+<p>[16] Tong Yang, Jun Zhu*, and Guofan Jin, “Compact freeform off-axis three-mirror imaging system based on the integration of primary and tertiary mirrors on one single surface," <strong>Chinese Optics Letters</strong> 14, 060801 (2016).</p>
+
+<p>[17] Tong Yang, Jun Zhu*, and Guofan Jin, “Design of a freeform dual field-of-views, dual focal lengths off-axis three-mirror imaging system with a point-by-point construction-iteration process," <strong>Chinese Optics Letters</strong> 14, 060801 (2016).</p>
+
+<p>[18] Tong Yang, Guofan Jin, and Jun Zhu*, “Design of image-side telecentric freeform imaging system using point-by-point construction-iteration process”. <strong>Chinese Optics Letters</strong> 15, 062202 (2017).</p>
+
+<p>[19]	Jun Zhu*, Tong Yang, and Guofan Jin, “Design method of surface contour for a freeform lens with wide linear field-of-view,” <strong>Optics Express</strong> 21, 26080-26092 (2013).</p>
+<p>[20]	Jun Zhu*, Xiaofei Wu, Tong Yang, and Guofan Jin, "Generating optical freeform surfaces considering both coordinates and normals of discrete data points," <strong>Journal of the Optical Society of America A</strong> 31, 2401-2408 (2014).</p>
+<p>[21]	Wei Hou, Jun Zhu*, Tong Yang, and Guofan Jin, “Construction method through forward and reverse ray tracing for a design of ultra-wide linear field-of-view off-axis freeform imaging systems,” <strong>Journal of Optics</strong> 17, 055603 (2015).</p>
+<p>[22]	Xiaofei Wu, Jun Zhu*, Tong Yang, and Guofan Jin, “Transverse image translation using an optical freeform single lens,” <strong>Applied Optics</strong> 54, E55-E62 (2015).</p>
+<p>[23]	Cheng Yao, Dewen Cheng*, Tong Yang, and Yongtian Wang, "Design of an optical see-through light-field near-eye display using a discrete lenslet array," <strong>Optics Express</strong> 26, 18292-18301 (2018).</p>
+<p>[24]	Luo Gu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Shanshan Wang, Tong Yang, and Yongtian Wang*, "Design of a uniform-illumination two-dimensional waveguide head-up display with thin plate compensator," <strong>Optics Express</strong> 27, 12692-12709 (2019).</p>
+<p>[25]	Yue Liu, Dewen Cheng*, Tong Yang, and Yongtian Wang, "High precision integrated projection imaging optical design based on microlens array," <strong>Optics Express</strong> 27, 12264-12281 (2019).</p>
+<p>[26]	Zhuojing Zhao, Dewen Cheng*, Tong Yang, Qiwei Wang, Qichao Hou, Luo Gu, and Yongtian Wang, "Design and evaluation of a biocular system," <strong>Applied Optics</strong> 58, 7851-7857 (2019).</p>
+<p>[27]	Luo Gu, Dewen Cheng*, Yue Liu, Junhao Ni, Tong Yang, and Yongtian Wang, "Design and fabrication of an off-axis four-mirror system for head-up displays," <strong>Applied Opitcs</strong> 59, 4893-4900 (2020).</p>
 
 
 
