--- a/news.html
+++ b/news.html
@@ -66,6 +66,7 @@
 <a class="image featured"><img src="images/hulianwangplus2020.jpg" alt="" /></a>
 </section></div></div>
 <p>[2020-11-06] 我们有关实现超薄、大视场、消杂光的近眼显示双层波导设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
+<p>[2020-10-30] 实验室正式搬迁到北理工中关村校区南门1号楼。</p>
 <p>[2020-09-26] 我们有关利用强化学习和聚类进行自由曲面成像系统设计与经验总结的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2020-09-20] 欢迎李阳、李浩然、李丹阳、马骁、汤海松、王永东、肖钰皓、张甜、周丽军9位同学加入实验室团队！</p>
 
