--- a/publications.html
+++ b/publications.html
@@ -100,7 +100,9 @@ a:active {
 
 <h3>2020年</h3>
 
-<p>[56]	Qiwei Wang, Dewen Cheng*, Qichao Hou, Luo Gu, and Yongtian Wang, "Design of an ultra-thin, wide-angle, stray-light-free near-eye display with a dual-layer geometrical waveguide," <strong>Opt. Express</strong> 28, 35376-35394 (2020)<a href="https://doi.org/10.1364/OE.409006"> DOI: 10.1364/OE.409006</a></p>
+<p>[57]	Cheng Yao, Dewen Cheng*, and Yongtian Wang, "Matrix optics representation and imaging analysis of a light-field near-eye display," <strong>Opt. Express</strong> 28, 39976-39997 (2020).<a href="https://doi.org/10.1364/OE.411997"> DOI: 10.1364/OE.411997</a></p>
+
+<p>[56]	Qiwei Wang, Dewen Cheng*, Qichao Hou, Luo Gu, and Yongtian Wang, "Design of an ultra-thin, wide-angle, stray-light-free near-eye display with a dual-layer geometrical waveguide," <strong>Opt. Express</strong> 28, 35376-35394 (2020).<a href="https://doi.org/10.1364/OE.409006"> DOI: 10.1364/OE.409006</a></p>
 
 <p>[55]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28(20): 30309-30323, 2020.<a href="https://doi.org/10.1364/OE.404808"> DOI: 10.1364/OE.404808</a></p>
 
