--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -119,6 +119,20 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <p></p>
                                        
 
+<p>[57]	Cheng Yao, Dewen Cheng*, and Yongtian Wang, "Matrix optics representation and imaging analysis of a light-field near-eye display," <strong>Optics Express</strong> 28, 39976-39997 (2020).<a href="https://doi.org/10.1364/OE.411997"> DOI: 10.1364/OE.411997</a></p>
+
+<p>[56]	Qiwei Wang, Dewen Cheng*, Qichao Hou, Luo Gu, and Yongtian Wang, "Design of an ultra-thin, wide-angle, stray-light-free near-eye display with a dual-layer geometrical waveguide," <strong>Optics Express</strong> 28, 35376-35394 (2020).<a href="https://doi.org/10.1364/OE.409006"> DOI: 10.1364/OE.409006</a></p>
+
+<p>[55]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28(20): 30309-30323, 2020.<a href="https://doi.org/10.1364/OE.404808"> DOI: 10.1364/OE.404808</a></p>
+
+<p class="class2">[54]	司佳, 冯泽心*, 程德文, 王涌天. “实现给定能量比离散光斑阵列的自由曲面分束器,” <strong>光学学报</strong>, 40(17): 1722004, 2020.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (封面文章)</strong></p>
+<p>Jia Si, Zexin Feng*, Dewen Cheng, Yongtian Wang. “Freeform Surface Beam Splitter for Discrete Spot Array with Prescribed Energy Proportion,” <strong>Acta Optica Sinica</strong>, 40(17): 1722004, 2020. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (Cover paper)</strong></p>
+
+<p class="class2">[53]	杨通, 段璎哲, 程德文, 王涌天*. 自由曲面成像光学系统设计:理论、发展与应用,” <strong>光学学报</strong>, 41(1): 0108001, 2020.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ7baf44640789be49">DOI: 10.3788/AOS202141.0108001</a><strong> (特邀综述)</strong></p>
+<p>Tong Yang, Yingzhe Duan, Dewen Cheng, Yongtian Wang*. “Freeform Imaging Optical System Design: Theories, Development, and Applications,” <strong>Acta Optica Sinica</strong>, 41(1): 0108001, 2020. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ7baf44640789be49">DOI: 10.3788/AOS202141.0108001</a><strong> (Invited review)</strong></p>
+                                       
+<p> [52]	Zexin Feng, Dewen Cheng, Yongtian Wang*, “Iterative freeform lens design for prescribed irradiance on curved target,” <strong>Opto-Electronic Advances</strong>, 3(7): 200010, 2020. <a href="https://doi.org/10.29026/oea.2020.200010"> DOI: 10.29026/oea.2020.200010</a> <strong>(Cover paper)</strong></p>
+
 <p> [51]	Luo Gu, Dewen Cheng*, Yue Liu, Junhao Ni, Tong Yang, Yongtian Wang, “Design and fabrication of an off-axis four-mirror system for head-up displays,” <strong>Applied Optics</strong>, 59(16): 4893-4900, 2020. <a href="https://dx.doi.org/10.1364/AO.392602"> DOI: 10.1364/AO.392602</a></p>
 
 <p>[50]	Yingzhe Duan, Tong Yang*, Dewen Cheng, Yongtian Wang, “Design method for nonsymmetric imaging optics consisting of freeform-surface-substrate phase elements,” <strong>Optics Express</strong>, 28(2): 1603-1620, 2020.<a href="https://dx.doi.org/10.1364/OE.381716"> DOI: 10.1364/OE.381716</a></p>
