--- a/members.html
+++ b/members.html
@@ -295,7 +295,7 @@
 															
 															<h3 align="left">王其为</h3>
 															<p class="class2" align="left">博士研究生</p>
-                                                            <p class="class2" align="left">入学时间：2018</p>
+                                                            <p class="class2" align="left">入学时间：2017</p>
                                                             <p class="class2" align="left">研究方向：波导近眼显示系统</p>
                                                             <p class="class2" align="left">硕士：北京理工大学（本实验室）</p>
                                                             <p class="class2" align="left">硕士专业：光学工程</p>
@@ -477,7 +477,7 @@
 															<h3 align="left">沈文睿</h3>
 															<p class="class2" align="left">博士研究生</p>
                                                             <p class="class2" align="left">入学时间：2018(2020转博)</p>
-                                                            <p class="class2" align="left">研究方向：TBD</p>
+                                                            <p class="class2" align="left">研究方向：目视系统设计</p>
                                                             <p class="class2" align="left">本科：北京理工大学</p>
                                                             <p class="class2" align="left">本科专业：光电信息科学与工程</p>
                                                             <p class="class2" align="left">Email：1065865722@qq.com</p>
@@ -843,7 +843,7 @@
 															<h3 align="left">查文杰</h3>
 															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2019</p>
-                                                            <p class="class2" align="left">研究方向：TBD</p>
+                                                            <p class="class2" align="left">研究方向：测试系统设计</p>
                                                             <p class="class2" align="left">本科：北京理工大学</p>
                                                             <p class="class2" align="left">本科专业：光电信息科学与工程</p>
                                                             <p class="class2" align="left">Email：wenjiezc@163.com</p>
