--- a/news.html
+++ b/news.html
@@ -59,7 +59,18 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-
+<p>[2020-12-25] 在先进遥感技术北京市重点实验室举办的首届“天瞐杯”先进光学遥感设计大赛中，实验室参赛的两个作品分别获得一等奖（第一名）和二等奖</strong>。</p>
+<div class="row"><div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/tianmo_ndw.jpg" alt="" /></a>
+</section></div>
+<div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/tianmo_ly.jpg" alt="" /></a>
+</section></div>
+</div>
+<div class="row"><div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/tianmo_chl.jpg" alt="" /></a>
+</section></div>
+</div>
 <p>[2020-12-17] 我们有关基于矩阵光学的光场表示和成像分析的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2020-12-16] 欢迎魏利博士加入实验室团队进行博士后研究！</p>
 <p>[2020-11-20] 2020年11月17日至20日，以“我敢闯 我会创”为主题的第六届中国国际“互联网+”大学生创新创业大赛总决赛在华南理工大学举行。北理工光电学院参赛队伍：耐德佳——近眼显示光学解决方案全球领先者 （指导老师：程德文教授、王涌天教授、王伟副研究员）取得银奖！本届比赛汇聚了117个国家和地区、4186所学校147万个项目、631万人报名参赛，453个项目进入总决赛。<a href="http://opt.bit.edu.cn/dtxx/b190232.htm">新闻链接</a></p>
