--- a/publications.html
+++ b/publications.html
@@ -345,6 +345,13 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 <p>[27]	程德文. 一种轻薄型虚像成像装置, 申请日2017/06/02, 授权日2018/01/19, 中国, 专利号: ZL201720639555.X。</p>
 <p>[28]	程德文, 王其为. NEAR-EYE DISPLAY APPARATUS, 申请日2018/01/03, 授权日2019/6/5, PCT, 专利号: US10330937B2。</p>
 <p>[29]	程德文, 王其为. WAVEGUIDE OPTICAL ELEMENT AND NEAR-EYE DISPLAY APPARATUS, 申请日2018/01/10, 授权日2019/6/5, 美国, 专利号: US10330938B2。</p>
+<p>[30]	冯泽心, 程德文, 王涌天. 一种调控光分布自由曲面光学系统的简化构建方法. 201910735502.1. 申请日：2019.08.09. 授权日：2020.12.8.</p>
+<p>[31]	杨通, 程德文, 王涌天. 自由曲面离轴三反成像光谱仪. 201810049191.9. 申请日：2018.01.18. 授权日：2019.10.18.</p> 
+<p>[32]	杨通, 程德文, 王涌天. 基于平板相位元件的离轴三反成像系统. 201810922673.0. 申请日：2018.08.14. 授权日：2020.08.11.</p> 
+<p>[33]	杨通, 程德文, 王涌天. 基于平板相位元件的成像光学系统的设计方法. 201810922636.X. 申请日：2018.08.14. 授权日：2020.11.10.</p> 
+<p>[34]	杨通, 程德文, 王涌天. 一种自由曲面离轴反射系统初始结构生成方法. 201910472849.1. 申请日：2019.05.31. 授权日：2020.08.11.</p> 
+<p>[35]	杨通, 倪俊豪, 程德文, 王涌天. 一种自由曲面成像系统面形公差分析方法. 201910978048.2. 申请日：2019.10.15. 授权日：2020.10.16. </p>
+<p>[36]	杨通, 段璎哲, 程德文, 王涌天. 基于自由曲面基底相位元件的离轴三反成像系统. 201910978048.2. 申请日：2019.12.02. 授权日：2021.02.02. </p>
 
                                         
 										
