--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/vrar.jpg" alt="" /></a>
-															<h3><a href="#">虚拟现实与增强现实头戴显示技术</a></h3>
+															<a class="image featured"><img src="images/vrar.jpg" alt="" /></a>
+															<h3>虚拟现实与增强现实头戴显示技术</h3>
 															<p align="left">
 																增强现实（AR）和虚拟现实（VR）技术被认为是继智能手机之后的下一代计算平台。超轻薄、大视场和像质优良的智能显示技术作为AR/VR的核心技术，是当前AR/VR领域的重要发展方向之一，也是实验室的重要研究方向。
 															</p>
@@ -101,8 +101,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/freeform.jpg" alt="" /></a>
-															<h3><a href="#">自由曲面光学</a></h3>
+															<a class="image featured"><img src="images/freeform.jpg" alt="" /></a>
+															<h3>自由曲面光学</h3>
 															<p align="left">
 																自由曲面的提出和应用被认为是光学设计界的一次革命性发展，在天文望远、光学遥感、先进成像、VR/AR、光谱分析等科研、工业、教育、娱乐等各个方面有突出应用前景。实验室面向自由曲面成像系统与非成像系统设计两方面开展研究，包含设计方法、像差理论、优化策略、公差分析、系统研制、精密加工检测等各个方面。
 															</p>
@@ -119,8 +119,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/od.jpg" alt="" /></a>
-															<h3><a href="#">光学设计</a></h3>
+															<a class="image featured"><img src="images/od.jpg" alt="" /></a>
+															<h3>光学设计</h3>
 															<p align="left">
 除了近眼显示和自由曲面光学外，实验室面向其它各类型光学系统的设计开展研究，相关成果已经得到了成功推广应用。
 															</p>
@@ -131,8 +131,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/co.jpg" alt="" /></a>
-															<h3><a href="#">计算光学</a></h3>
+															<a class="image featured"><img src="images/co.jpg" alt="" /></a>
+															<h3>计算光学</h3>
 															<p align="left">
 																计算光学通过数学、光学与计算机的深度交叉与融合，突破常规光学的极限，实现以前无法实现的新性能，内容包含计算光传输、计算照明（面向3D成像）、计算显示及计算成像的新理论、新算法、新机制与新系统。
 															</p>
@@ -155,8 +155,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/daoshi.jpg" alt="" /></a>
-															<h3><a href="#">专业导师团队</a></h3>
+															<a class="image featured"><img src="images/daoshi.jpg" alt="" /></a>
+															<h3>专业导师团队</h3>
 															<p align="left">
 																实验室拥有在光学设计、近眼显示、计算光学方向的专业导师团队，助力同学们在相关领域取得一流的成果。
 															</p>
@@ -167,8 +167,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/ap.jpg" alt="" /></a>
-															<h3><a href="#">理论应用结合</a></h3>
+															<a class="image featured"><img src="images/ap.jpg" alt="" /></a>
+															<h3>理论应用结合</h3>
 															<p align="left">
 实验室长期以来注重将理论与实际应用相结合，既注重基础理论、算法与仿真技术等方面的深入研究，也注重样机研制与应用推广。
 															</p>
@@ -179,8 +179,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/spdt.jpg" alt="" /></a>
-															<h3><a href="#">加工测试平台</a></h3>
+															<a class="image featured"><img src="images/spdt.jpg" alt="" /></a>
+															<h3>加工测试平台</h3>
 															<p align="left">
 																在北京理工大学的大力支持下，实验室拥有光学设计、自由曲面光学与VR/AR系统研制与实验的先进硬件条件。
 															</p>
@@ -191,8 +191,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/codev.jpg" alt="" /></a>
-															<h3><a href="#">设计软件平台</a></h3>
+															<a class="image featured"><img src="images/codev.jpg" alt="" /></a>
+															<h3>设计软件平台</h3>
 															<p align="left">
 																实验室拥有CODE V，LightTools，VirtualLab等业界最优秀的、最新光学设计与仿真软件，为开展理论算法、系统设计、仿真分析等研究提供强有力保障。
 															</p>
