--- a/news.html
+++ b/news.html
@@ -59,7 +59,10 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-<p>[2020-12-25] 在先进遥感技术北京市重点实验室举办的首届“天瞐杯”先进光学遥感设计大赛中，实验室参赛的两个作品分别获得一等奖（第一名）和二等奖</strong>。</p>
+
+<p>[2021-02-23] 恭喜姚成同学顺利通过博士学位论文答辩。感谢姚成同学为实验室作出的贡献，祝姚博士前程似锦！</p>
+
+<p>[2020-12-25] 在先进遥感技术北京市重点实验室举办的首届“天瞐杯”先进光学遥感设计大赛中，实验室参赛的两个作品分别获得<strong>一等奖（第一名）和二等奖</strong>。</p>
 <div class="row"><div class="col-5"><section class="box feature">
 <a class="image featured"><img src="images/tianmo_ndw.jpg" alt="" /></a>
 </section></div>
@@ -79,6 +82,7 @@
 <a class="image featured"><img src="images/hulianwangplus2020.jpg" alt="" /></a>
 </section></div></div>
 <p>[2020-11-06] 我们有关实现超薄、大视场、消杂光的近眼显示双层波导设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
+<p>[2019-11-05] 硕士研究生段璎哲、倪俊豪获得2020年度<strong>硕士研究生国家奖学金</strong>。</p>
 <p>[2020-10-30] 实验室正式搬迁到北理工中关村校区南门1号楼。</p>
 <p>[2020-09-26] 我们有关利用强化学习和聚类进行自由曲面成像系统设计与经验总结的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2020-09-20] 欢迎李阳、李浩然、李丹阳、马骁、汤海松、王永东、肖钰皓、张甜、周丽军9位同学加入实验室团队！</p>
@@ -137,7 +141,7 @@
 
 </div>
 
-<p>[2019-11-10] 博士研究生顾罗获得2019年度<strong>博士生国家奖学金</strong>。</p>
+<p>[2019-11-10] 博士研究生顾罗获得2019年度<strong>博士研究生国家奖学金</strong>。</p>
 
 
 <p>[2019-11-08] 我们有关利用中间照度分布传输方法(Iterative irradiance transport, IIT)构建光学自由曲面的论文在线发表于顶级期刊<strong>Optics Letters</strong>。</p>
