--- a/members.html
+++ b/members.html
@@ -926,7 +926,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a class="image featured"><img src="images/zuoqi_p.jpg" alt="" /></a>
+															<a class="image featured"><img src="images/zuoqi_p2.jpg" alt="" /></a>
 															
 														</section>
 
