--- a/news.html
+++ b/news.html
@@ -60,6 +60,9 @@
 										<h2 class="major"><span>新闻纪录</span></h2>
 
 
+
+<p>[2021-04-16] 我们有关利用双自由曲面透镜实现大出光角度扩展光源的辐照度分布调控的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
+<p>[2021-03-01] 我们有关考虑径向与切向畸变的光学系统畸变校正的论文在线发表于<strong>Results in Optics</strong>。</p>
 <p>[2021-02-23] 恭喜姚成同学顺利通过博士学位论文答辩。感谢姚成同学为实验室作出的贡献，祝姚博士前程似锦！</p>
 
 <p>[2020-12-25] 在先进遥感技术北京市重点实验室举办的首届“天瞐杯”先进光学遥感设计大赛中，实验室参赛的两个作品分别获得<strong>一等奖（第一名）和二等奖</strong>。</p>
