--- a/news.html
+++ b/news.html
@@ -60,7 +60,8 @@
 										<h2 class="major"><span>新闻纪录</span></h2>
 
 
-
+<p>[2021-05-19] 我们有关利用高斯径向基函数曲面设计大视场自由曲面成像系统的论文在线发表于<strong>Applied Optics</strong>。</p>
+<p>[2021-05-10] 我们参与合作的有关实现高分辨率红外压缩感知成像的论文在线发表于顶级期刊<strong>Optics Letters</strong>。</p>
 <p>[2021-04-16] 我们有关利用双自由曲面透镜实现大出光角度扩展光源的辐照度分布调控的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2021-03-01] 我们有关考虑径向与切向畸变的光学系统畸变校正的论文在线发表于<strong>Results in Optics</strong>。</p>
 <p>[2021-02-23] 恭喜姚成同学顺利通过博士学位论文答辩。感谢姚成同学为实验室作出的贡献，祝姚博士前程似锦！</p>
