--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,11 @@ a:active {
 
 <h3>2021年</h3>
 
+
+<p>[61]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong> 60, 4491-4501 (2021).<a href="https://doi.org/10.1364/AO.423022"> DOI: 10.1364/AO.423022</a></p>
+
+<p>[60]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong> 46, 2469-2472 (2021).<a href="https://doi.org/10.1364/OL.420481"> DOI: 10.1364/OL.420481</a></p>
+
 <p>[59]	Yuyin Li, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Designing double freeform surfaces for large ray bending irradiance tailoring of extended LED sources," <strong>Optics Express</strong> 29, 13469-13485 (2021).<a href="https://doi.org/10.1364/OE.423629"> DOI: 10.1364/OE.423629</a></p>
 
 <p>[58]	Yue Liu, Dewen Cheng*, Qiwei Wang, Qichao Hou, Luo Gu, Hailong Chen, Tong Yang, and Yongtian Wang, "Optical distortion correction considering radial and tangential distortion rates defined by optical design," <strong>Results in Optics</strong> 3, 100072 (2021).<a href="https://doi.org/10.1016/j.rio.2021.100072"> DOI: 10.1016/j.rio.2021.100072</a></p>
@@ -110,7 +115,7 @@ a:active {
 
 <p>[56]	Qiwei Wang, Dewen Cheng*, Qichao Hou, Luo Gu, and Yongtian Wang, "Design of an ultra-thin, wide-angle, stray-light-free near-eye display with a dual-layer geometrical waveguide," <strong>Optics Express</strong> 28, 35376-35394 (2020).<a href="https://doi.org/10.1364/OE.409006"> DOI: 10.1364/OE.409006</a></p>
 
-<p>[55]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28(20): 30309-30323, 2020.<a href="https://doi.org/10.1364/OE.404808"> DOI: 10.1364/OE.404808</a></p>
+<p>[55]	Tong Yang, Dewen Cheng*, Yongtian Wang, “Designing freeform imaging systems based on reinforcement learning,” <strong>Optics Express</strong>, 28, 30309-30323 (2020).<a href="https://doi.org/10.1364/OE.404808"> DOI: 10.1364/OE.404808</a></p>
 
 <p class="class2">[54]	司佳, 冯泽心*, 程德文, 王涌天. “实现给定能量比离散光斑阵列的自由曲面分束器,” <strong>光学学报</strong>, 40(17): 1722004, 2020.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (封面文章)</strong></p>
 <p>Jia Si, Zexin Feng*, Dewen Cheng, Yongtian Wang. “Freeform Surface Beam Splitter for Discrete Spot Array with Prescribed Energy Proportion,” <strong>Acta Optica Sinica</strong>, 40(17): 1722004, 2020. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS202040.1722004</a><strong> (Cover paper)</strong></p>
