--- a/news.html
+++ b/news.html
@@ -59,7 +59,14 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-
+<p>[2021-06-06] 恭喜雷卫星、周茂、袁瑛、司佳、段璎哲、倪俊豪六位同学顺利通过硕士学位论文答辩。感谢大家为实验室作出的贡献，祝大家前程似锦！</p>
+<div class="row"><div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/2021gra3.jpg" alt="" /></a>
+</section></div>
+<div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/2021gra4.jpg" alt="" /></a>
+</section></div>
+</div>
 <p>[2021-05-19] 我们有关利用高斯径向基函数曲面设计大视场自由曲面成像系统的论文在线发表于<strong>Applied Optics</strong>。</p>
 <p>[2021-05-10] 我们参与合作的有关实现高分辨率红外压缩感知成像的论文在线发表于顶级期刊<strong>Optics Letters</strong>。</p>
 <p>[2021-04-16] 我们有关利用双自由曲面透镜实现大出光角度扩展光源的辐照度分布调控的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
