--- a/members.html
+++ b/members.html
@@ -535,7 +535,7 @@
 															<h3 align="left">李浩然</h3>
 															<p class="class2" align="left">博士研究生（直博）</p>
                                                             <p class="class2" align="left">入学时间：2020</p>
-                                                            <p class="class2" align="left">研究方向：TBD</p>
+                                                            <p class="class2" align="left">研究方向：计算成像光学设计</p>
                                                             <p class="class2" align="left">本科：北京理工大学</p>
                                                             <p class="class2" align="left">本科专业：光电信息科学与工程</p>
                                                             <p class="class2" align="left">Email：1424418685@qq.com</p>
@@ -966,7 +966,7 @@
 															<h3 align="left">李丹阳</h3>
 															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2020</p>
-                                                            <p class="class2" align="left">研究方向：TBD</p>
+                                                            <p class="class2" align="left">研究方向：AR光学系统设计</p>
                                                             <p class="class2" align="left">本科：北京理工大学</p>
                                                             <p class="class2" align="left">本科专业：测控技术与仪器</p>
                                                             <p class="class2" align="left">Email：1075147409@qq.com</p>
@@ -1003,7 +1003,7 @@
 															<h3 align="left">马骁</h3>
 															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2020</p>
-                                                            <p class="class2" align="left">研究方向：TBD</p>
+                                                            <p class="class2" align="left">研究方向：光学相位检测</p>
                                                             <p class="class2" align="left">本科：四川大学</p>
                                                             <p class="class2" align="left">本科专业：光电信息科学与工程</p>
                                                             <p class="class2" align="left">Email：2029701060@qq.com</p>
@@ -1091,7 +1091,7 @@
 															<h3 align="left">肖钰皓</h3>
 															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2020</p>
-                                                            <p class="class2" align="left">研究方向：TBD</p>
+                                                            <p class="class2" align="left">研究方向：近眼显示系统设计</p>
                                                             <p class="class2" align="left">本科：武汉理工大学</p>
                                                             <p class="class2" align="left">本科专业：光电信息科学与工程</p>
                                                             <p class="class2" align="left">Email：654599523@qq.com</p>
@@ -1127,7 +1127,7 @@
 															<h3 align="left">张甜</h3>
 															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2020</p>
-                                                            <p class="class2" align="left">研究方向：TBD</p>
+                                                            <p class="class2" align="left">研究方向：扫描系统设计</p>
                                                             <p class="class2" align="left">本科：西安邮电大学</p>
                                                             <p class="class2" align="left">本科专业：光电信息科学与工程</p>
                                                             <p class="class2" align="left">Email：z_tian6@163.com</p>
