--- a/news.html
+++ b/news.html
@@ -58,7 +58,10 @@
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
-
+                                        
+                                        
+<p>[2021-06-24] 祝贺倪俊豪同学的硕士学位论文被评为<strong>北京理工大学优秀硕士学位论文（校优硕）</strong>。</p>
+<p>[2021-06-10] 祝贺倪俊豪、段璎哲同学被评为<strong>北京理工大学优秀毕业生</strong>；祝贺段璎哲同学被评为<strong>北京市优秀毕业生</strong>。</p>
 <p>[2021-06-06] 恭喜雷卫星、周茂、袁瑛、司佳、段璎哲、倪俊豪六位同学顺利通过硕士学位论文答辩。感谢大家为实验室作出的贡献，祝大家前程似锦！</p>
 <div class="row"><div class="col-5"><section class="box feature">
 <a class="image featured"><img src="images/2021gra3.jpg" alt="" /></a>
@@ -93,7 +96,7 @@
 <a class="image featured"><img src="images/hulianwangplus2020.jpg" alt="" /></a>
 </section></div></div>
 <p>[2020-11-06] 我们有关实现超薄、大视场、消杂光的近眼显示双层波导设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
-<p>[2019-11-05] 硕士研究生段璎哲、倪俊豪获得2020年度<strong>硕士研究生国家奖学金</strong>。</p>
+<p>[2020-11-05] 硕士研究生段璎哲、倪俊豪获得2020年度<strong>硕士研究生国家奖学金</strong>。</p>
 <p>[2020-10-30] 实验室正式搬迁到北理工中关村校区南门1号楼。</p>
 <p>[2020-09-26] 我们有关利用强化学习和聚类进行自由曲面成像系统设计与经验总结的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2020-09-20] 欢迎李阳、李浩然、李丹阳、马骁、汤海松、王永东、肖钰皓、张甜、周丽军9位同学加入实验室团队！</p>
