--- a/members.html
+++ b/members.html
@@ -1079,7 +1079,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<h3 align="left">黄逸轮</h3>
+															<h3 align="left">黄逸伦</h3>
 															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2021</p>
                                                             <p class="class2" align="left">研究方向：TBD</p>
