--- a/members.html
+++ b/members.html
@@ -1045,7 +1045,7 @@
 															<h3 align="left">戴玺隆</h3>
 															<p class="class2" align="left">硕士研究生</p>
                                                             <p class="class2" align="left">入学时间：2021</p>
-                                                            <p class="class2" align="left">研究方向：自由曲面成像系统</p>
+                                                            <p class="class2" align="left">研究方向：TBD</p>
                                                             <p class="class2" align="left">本科：太原理工大学</p>
                                                             <p class="class2" align="left">本科专业：光电信息科学与工程</p>
                                                             
